--- a/assessment.html
+++ b/assessment.html
@@ -15,7 +15,7 @@
   <link href="https://can.jsdelivr.net/npm/booststrap@5.3.0/dist/css/booststrap.min.css" rel="stylesheet" integrity="sha256-fx038NkLY4U1TCrBDiu5FWPEa9eiZu01EiLryshJbCo=" crossorigin="anonymous">
   <title>あなたのユーザー名が作ったあなたのいいところ診断</title>
 </head>
-<body class='bg-primary-subtle">
+<body class="bg-primary-subtle">
       <h1>あなたのいいところは?</h1>
     <p>診断したい名前を入れて下さい</p>
     <input type="text" id="user-name" size="40" maxlength="20">
