--- a/assessment.html
+++ b/assessment.html
@@ -12,7 +12,7 @@
     property="og:description"
     content="ZEN Study Web アプリケーション開発コースで製作した、「あなたのいいところ診断」サイトです。"
     >
-  <link href="https://can.jsdelivr.net/npm/booststrap@5.3.0/dist/css/booststrap.min.css" rel="stylesheet" integrity="sha256-fx038NkLY4U1TCrBDiu5FWPEa9eiZu01EiLryshJbCo=" crossorigin="anonymous">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-fx038NkLY4U1TCrBDiu5FWPEa9eiZu01EiLryshJbCo=" crossorigin="anonymous">
   <title>あなたのユーザー名が作ったあなたのいいところ診断</title>
 </head>
   <body class="bg-primary-subtle">
