--- a/assessment.html
+++ b/assessment.html
@@ -11,7 +11,8 @@
   <meta
     property="og:description"
     content="ZEN Study Web アプリケーション開発コースで製作した、「あなたのいいところ診断」サイトです。"
-    >
+    />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-fx038NkLY4U1TCrBDiu5FWPEa9eiZu01EiLryshJbCo=" crossorigin="anonymous">
   <title>あなたのユーザー名が作ったあなたのいいところ診断</title>
 </head>
@@ -37,8 +38,12 @@
          </div>
        </div>
 
-       <button id="result-area"></div>
-         <div id="tweet-area"></div>
+             <div class="row">
+        <div class="col-lg-9">
+          <div id="result-area"></div>
+        </div>
+      </div>
+      <div id="tweet-area" class="mt-3"></div>
        </div>
     <script src="assessment.js"></script>
 </body>
